--- a/project-lti/src/main/resources/application-local.properties
+++ b/project-lti/src/main/resources/application-local.properties
@@ -13,8 +13,8 @@ spring.datasource.initialization-mode=always
 #SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xxxx
-spring.mail.password=xxxx
+spring.mail.username=xxxxxxxx
+spring.mail.password=xxxxxxxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
