fixed template and notification issue

--- a/project-lti/src/main/resources/application-local.properties
+++ b/project-lti/src/main/resources/application-local.properties
@@ -6,15 +6,15 @@ spring.datasource.username=postgres
 spring.datasource.password=anmol1234
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
 
 #SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xxxxxxxx
-spring.mail.password=xxxxxxxx
+spring.mail.username=xxxxxxx
+spring.mail.password=xxxxxxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
